Add navigate to character detail

--- a/app/src/main/res/navigation/app_graph.xml
+++ b/app/src/main/res/navigation/app_graph.xml
@@ -8,5 +8,14 @@
         android:id="@+id/tabsFragment"
         android:name="com.akerimtay.rickandmorty.TabsFragment"
         android:label="TabsFragment"
-        tools:layout="@layout/fragment_tabs" />
+        tools:layout="@layout/fragment_tabs">
+        <action
+            android:id="@+id/action_tabsFragment_to_characterDetailFragment"
+            app:destination="@id/characterDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/characterDetailFragment"
+        android:name="com.akerimtay.rickandmorty.CharacterDetailFragment"
+        android:label="CharacterDetailFragment"
+        tools:layout="@layout/fragment_character_detail" />
 </navigation>
