--- a/resources/src/main/res/color/selector_navigation_item_color.xml
+++ b/resources/src/main/res/color/selector_navigation_item_color.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/white" android:state_checked="true" />
-    <item android:color="@color/white_alpha_60" />
+    <item android:color="?attr/colorSecondary" android:state_checked="true" />
+    <item android:color="?attr/colorOnPrimarySurface" />
 </selector>
