--- a/resources/src/main/res/values/colors.xml
+++ b/resources/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="white_alpha_60">#99FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="blue_grey_900">#152A3A</color>
+    <color name="blue_grey_950">#0B1E2D</color>
+    <color name="blue_grey_600">#5B6975</color>
+    <color name="blue_grey_500">#6E798C</color>
+    <color name="teal_400">#22A2BD</color>
+    <color name="green_600">#27AE60</color>
+    <color name="green_500">#43D049</color>
+    <color name="grey_600">#828282</color>
+    <color name="grey_400">#BDBDBD</color>
+    <color name="grey_100">#F2F2F2</color>
+    <color name="grey_50">#FCFCFC</color>
 </resources>
