--- a/resources/src/main/res/values/shape.xml
+++ b/resources/src/main/res/values/shape.xml
@@ -3,16 +3,20 @@
 
     <style name="ShapeAppearance.Owl.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">12dp</item>
+        <item name="cornerSize">@dimen/small_component_corner_radius</item>
     </style>
 
     <style name="ShapeAppearance.Owl.MediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">20dp</item>
+        <item name="cornerSize">@dimen/medium_component_corner_radius</item>
     </style>
 
     <style name="ShapeAppearance.Owl.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">0dp</item>
+        <item name="cornerSize">@dimen/large_component_corner_radius</item>
     </style>
+
+    <dimen name="small_component_corner_radius">12dp</dimen>
+    <dimen name="medium_component_corner_radius">20dp</dimen>
+    <dimen name="large_component_corner_radius">0dp</dimen>
 </resources>
