--- a/app/src/main/res/navigation/episodes_graph.xml
+++ b/app/src/main/res/navigation/episodes_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/episodesFragment"
-        android:name="com.akerimtay.rickandmorty.EpisodesFragment"
+        android:name="com.akerimtay.rickandmorty.episode.EpisodesFragment"
         android:label="EpisodesFragment"
         tools:layout="@layout/fragment_episodes" />
 </navigation>
