--- a/resources/src/main/res/values/styles.xml
+++ b/resources/src/main/res/values/styles.xml
@@ -3,9 +3,8 @@
 
     <style name="Widget.RM.BottomNavigationView" parent="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface">
         <item name="labelVisibilityMode">selected</item>
-        <item name="android:itemTextAppearance">?attr/textAppearanceCaption</item>
+        <item name="android:itemTextAppearance">?attr/styleTextRegular12</item>
         <item name="itemIconTint">@color/selector_navigation_item_color</item>
         <item name="itemTextColor">@color/selector_navigation_item_color</item>
     </style>
-
 </resources>
