--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -24,7 +24,7 @@
                 android:paddingBottom="8dp"
                 app:layout_collapseMode="pin">
 
-                <com.akerimtay.rickandmorty.uiKit.SearchLabelView
+                <com.akerimtay.rickandmorty.core.presentation.widget.SearchLabelView
                     android:id="@+id/search_label_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
