--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.akerimtay.rickandmorty.uiKit.SearchLabelView
+    <com.akerimtay.rickandmorty.core.presentation.widget.SearchLabelView
         android:id="@+id/search_label_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
