--- a/features/character/src/main/res/layout/fragment_characters.xml
+++ b/features/character/src/main/res/layout/fragment_characters.xml
@@ -25,36 +25,36 @@
                 app:layout_collapseMode="pin">
 
                 <com.akerimtay.rickandmorty.core.presentation.widget.SearchLabelView
-                    android:id="@+id/search_label_view"
+                    android:id="@+id/slv_characters"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="@id/end_toolbar_guideline"
-                    app:layout_constraintStart_toStartOf="@id/start_toolbar_guideline"
+                    app:layout_constraintEnd_toEndOf="@id/g_end_toolbar"
+                    app:layout_constraintStart_toStartOf="@id/g_start_toolbar"
                     app:layout_constraintTop_toTopOf="parent"
                     app:showFilter="true"
                     app:text="@string/find_character" />
 
                 <TextView
-                    android:id="@+id/character_count_text_view"
+                    android:id="@+id/tv_character_count"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/roboto_medium"
                     android:textAppearance="?attr/textAppearanceOverline"
                     android:textColor="?attr/colorLabelText"
-                    app:layout_constraintStart_toStartOf="@id/start_toolbar_guideline"
-                    app:layout_constraintTop_toBottomOf="@id/search_label_view"
+                    app:layout_constraintStart_toStartOf="@id/g_start_toolbar"
+                    app:layout_constraintTop_toBottomOf="@id/slv_characters"
                     tools:text="Total characters: 200" />
 
                 <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/start_toolbar_guideline"
+                    android:id="@+id/g_start_toolbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layout_constraintGuide_begin="16dp" />
 
                 <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/end_toolbar_guideline"
+                    android:id="@+id/g_end_toolbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -67,7 +67,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/scroll_view"
+        android:id="@+id/sv_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -88,14 +88,14 @@
             <!--                tools:listitem="@layout/item_character" />-->
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/start_guideline"
+                android:id="@+id/g_start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="16dp" />
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/end_guideline"
+                android:id="@+id/g_end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
