--- a/core/presentation/src/main/res/values/styles.xml
+++ b/core/presentation/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="Widget.RM.BottomNavigationView" parent="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface">
         <item name="labelVisibilityMode">selected</item>
-        <item name="android:itemTextAppearance">?attr/styleTextRegular12</item>
+        <item name="android:itemTextAppearance">@style/Theme.TextAppearance.Regular12</item>
         <item name="itemIconTint">@color/selector_navigation_item_color</item>
         <item name="itemTextColor">@color/selector_navigation_item_color</item>
     </style>
