--- a/core/presentation/src/main/res/values/styles_text.xml
+++ b/core/presentation/src/main/res/values/styles_text.xml
@@ -42,6 +42,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="Theme.TextAppearance.Medium16">
+        <item name="fontFamily">?attr/fontMedium</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="Theme.TextAppearance.Light12">
         <item name="fontFamily">?attr/fontLight</item>
         <item name="android:textSize">12sp</item>
