--- a/core/presentation/src/main/res/values/styles.xml
+++ b/core/presentation/src/main/res/values/styles.xml
@@ -7,4 +7,15 @@
         <item name="itemIconTint">@color/selector_navigation_item_color</item>
         <item name="itemTextColor">@color/selector_navigation_item_color</item>
     </style>
+
+    <style name="Widget.RM.Button" parent="@style/Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAppearance">@style/Theme.TextAppearance.Regular16</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="backgroundTint">@null</item>
+    </style>
 </resources>
