Fixed character status text color

--- a/core/presentation/src/main/res/values/colors.xml
+++ b/core/presentation/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="eastern_blue">#22A2BD</color>
     <color name="jungle_green">#27AE60</color>
     <color name="emerald">#43D049</color>
+    <color name="burnt_sienna">#EB5757</color>
 </resources>
