--- a/feature/character/src/main/res/layout/item_character_grid.xml
+++ b/feature/character/src/main/res/layout/item_character_grid.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
-        android:textColor="?attr/colorStatusText" />
+        tools:textColor="@color/emerald" />
 
     <TextView
         android:id="@+id/tv_name"
