--- a/feature/character/src/main/res/layout/item_character_linear.xml
+++ b/feature/character/src/main/res/layout/item_character_linear.xml
@@ -22,11 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
-        android:textColor="?attr/colorStatusText"
         app:layout_constraintBottom_toTopOf="@id/tv_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_avatar"
-        app:layout_constraintTop_toTopOf="@id/iv_avatar" />
+        app:layout_constraintTop_toTopOf="@id/iv_avatar"
+        tools:textColor="@color/emerald" />
 
     <TextView
         android:id="@+id/tv_name"
