Removed grid character variant

--- a/feature/character/src/main/res/layout/fragment_characters.xml
+++ b/feature/character/src/main/res/layout/fragment_characters.xml
@@ -84,7 +84,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:listitem="@layout/item_character_linear" />
+                tools:listitem="@layout/item_character" />
         </FrameLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
