--- a/feature/episode/src/main/res/layout/fragment_episodes_root.xml
+++ b/feature/episode/src/main/res/layout/fragment_episodes_root.xml
@@ -1,53 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.akerimtay.rickandmorty.core.presentation.widget.SearchLabelView
-        android:id="@+id/slv_episodes"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@id/end_guideline"
-        app:layout_constraintStart_toStartOf="@id/start_guideline"
-        app:layout_constraintTop_toTopOf="parent"
-        app:text="@string/find_episode" />
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tl_episodes"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:clipToPadding="false"
-        android:paddingHorizontal="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/slv_episodes"
-        app:tabIndicatorColor="?attr/colorPrimaryText"
-        app:tabMode="auto"
-        app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Button"
-        app:tabSelectedTextColor="?attr/colorPrimaryText"
-        app:tabTextColor="?attr/colorOnPrimary" />
+        android:background="?attr/colorBackground"
+        app:liftOnScroll="true">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vp_episodes"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|enterAlways|snapMargins">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                app:layout_collapseMode="pin">
+
+                <com.akerimtay.rickandmorty.core.presentation.widget.SearchLabelView
+                    android:id="@+id/slv_episodes"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:text="@string/find_episode" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tl_episodes" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/start_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/end_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="16dp" />
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tl_episodes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:paddingHorizontal="16dp"
+            app:tabIndicatorColor="?attr/colorPrimaryText"
+            app:tabMode="auto"
+            app:tabSelectedTextColor="?attr/colorPrimaryText"
+            app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Button"
+            app:tabTextColor="?attr/colorOnPrimary" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_episodes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
