--- a/app/src/main/res/navigation/locations_graph.xml
+++ b/app/src/main/res/navigation/locations_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/locationsFragment"
-        android:name="com.akerimtay.rickandmorty.location.presentation.list.LocationsFragment"
+        android:name="com.akerimtay.rickandmorty.location.presentation.ui.list.LocationsFragment"
         android:label="LocationsFragment"
         tools:layout="@layout/fragment_locations" />
 </navigation>
