Added header to characters recycler view

--- a/feature/character/src/main/res/layout/fragment_characters.xml
+++ b/feature/character/src/main/res/layout/fragment_characters.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -33,18 +32,6 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:showFilter="true"
                     app:text="@string/find_character" />
-
-                <TextView
-                    android:id="@+id/tv_character_count"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:textAppearance="?attr/textAppearanceOverline"
-                    android:textColor="?attr/colorLabelText"
-                    app:layout_constraintStart_toStartOf="@id/g_start_toolbar"
-                    app:layout_constraintTop_toBottomOf="@id/slv_characters"
-                    tools:text="Total characters: 200" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/g_start_toolbar"
@@ -84,7 +71,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:listitem="@layout/item_character" />
+                tools:listitem="@layout/item_character_horizontal" />
         </FrameLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
